--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Jason Walkow",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.5"
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
+    "mongodb": "^2.2.5",
+    "mongoose": "^4.5.9"
   }
 }
